--- a/views/index.jade
+++ b/views/index.jade
@@ -14,11 +14,14 @@ body
 		button#registerButton Register
 
 	div#registered
-		ul#userlist
+		p#currentlyLoggedinAs
+		div
+			h4 Your contacts
+			ul#contacts
 
-		
-	div#contacts
+		div#suggested 
+			h4 Suggested users
+			ul#userlist
 
-	div#groups
-
+	
 
